# django-project

./: .gitignore  README.md  build.sh  pyproject.toml  render.yaml  requirements.txt
bookings/: admin.py  models.py  serializers.py  urls.py  views.py
bookings/migrations/: 0001_initial.py  0002_initial.py  0003_initial.py  0004_initial.py  0005_alter_booking_experience_alter_booking_room_and_more.py  0006_remove_booking_experience_time_and_more.py
categories/: models.py  serializers.py  urls.py  views.py
categories/migrations/: 0001_initial.py
common/: models.py
config/: settings.py  urls.py  variables.py
direct_messages/: admin.py  models.py
direct_messages/migrations/: 0001_initial.py  0002_initial.py  0003_alter_chattingroom_users_alter_message_room_and_more.py
experiences/: admin.py  models.py  serializers.py  urls.py  views.py
experiences/migrations/: 0001_initial.py  0002_initial.py  0003_rename_end_experience_duration_and_more.py  0004_alter_experience_duration_alter_experience_start.py
medias/: admin.py  models.py  serializers.py  urls.py  views.py
medias/migrations/: 0001_initial.py  0002_initial.py  0003_alter_photo_experience_alter_photo_room_and_more.py  0004_alter_photo_file_alter_video_file.py  0005_alter_photo_description.py  0006_photo_thumb.py
reviews/: models.py  serializers.py
reviews/migrations/: 0001_initial.py  0002_initial.py  (+2 more)
rooms/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
users/: admin.py  models.py  serializers.py  urls.py  views.py
wishlists/: models.py  serializers.py  urls.py  views.py
(+16 files in other folders)
